--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="branch-card">
         <img src="./Cairo.gif" alt="فرع الخدمات">
         <h2>فرع الخدمات</h2>
-        <p>هنا تقدر تلاقي جميع البوتات   </p>
+        <p>هنا تقدر تلاقي جميع البوتات..</p>
         <a href="https://discord.gg/ca-s" target="_blank" class="btn-link">Server Link</a>
       </div>
 
