--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
   </main>
   <footer>
-    © <span id="year"></span> Cairo Community. جميع الحقوق محفوظة.
+    © <span id="year"></span> Cairo Community top. جميع الحقوق محفوظة.
     <br />
     <a href="https://discordapp.com/users/1199115391776067627" target="_blank" class="btn-link btn-request">
       لطلب مثل هذا الموقع
