--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="branch-card">
         <img src="./Cairo.gif" alt="فرع الخدمات">
         <h2>فرع الخدمات</h2>
-        <p>هنا تقدر تلاقي جميع البوتات..</p>
+        <p>هنا تقدر تلاقي جميع البوتات</p>
         <a href="https://discord.gg/ca-s" target="_blank" class="btn-link">Server Link</a>
       </div>
 
@@ -155,7 +155,7 @@
     </div>
   </main>
   <footer>
-    © <span id="year"></span> Cairo Community top. جميع الحقوق محفوظة.
+    © <span id="year"></span> Cairo Community  جميع الحقوق محفوظة.
     <br />
     <a href="https://discordapp.com/users/1199115391776067627" target="_blank" class="btn-link btn-request">
       لطلب مثل هذا الموقع
